[tool.poetry]
name = "sqlalchemy-js-api"
version = "0.1.1"
description = ""
authors = ["Giuseppe Di Bona <giusedb@gmail.com>"]
readme = "README.md"
packages = [{include = "jsalchemy_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^6.2.1"
sqlalchemy = ">=2.0"
click = "^8.3.0"


[tool.poetry.group.devel.dependencies]
pytest = "^8.3.4"
ipython = "^8.31.0"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
ipython = "^8.31.0"
pytest-mockredis = "^0.1.6"
mockaioredis = "^0.0.16"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
pytest-asyncio = "^1.2.0"
fakeredis = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
